# vtracer

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_PY.md  RELEASES.md  Readme.md  flake.nix
.github/workflows/: CI.yml  python.yml  release.yml  rust.yml
cmdapp/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
cmdapp/src/: config.rs  converter.rs  lib.rs  main.rs  python.rs  svg.rs  util.rs
cmdapp/vtracer/: README.md  README_PY.md  __init__.py  vtracer.pyi
docs/: 0.bootstrap.js  COPYRIGHT  bootstrap.js  index.html
docs/assets/samples/: attributions.txt
webapp/: .gitignore  Cargo.toml  Readme.md
webapp/app/: index.html  index.js  package-lock.json  package.json  webpack.config.js
webapp/src/: canvas.rs  common.rs  lib.rs  svg.rs  utils.rs
webapp/src/conversion/: binary_image.rs  color_image.rs  mod.rs  util.rs
