[package]
name = "vtracer"
version = "0.6.3"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2021"
description = "A cmd app to convert images into vector graphics."
license = "MIT OR Apache-2.0"
homepage = "http://www.visioncortex.org/vtracer"
repository = "https://github.com/visioncortex/vtracer/"
categories = ["graphics"]
keywords = ["svg", "computer-graphics"]

[dependencies]
clap = "2.33.3"
image = "0.23.10"
visioncortex = { version = "0.8.0" }
fastrand = "1.8"
pyo3 = "0.19.0"

[lib]
name = "vtracer"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "vtracer"
path = "src/main.rs"