[tool.poetry]
name = "vtracer"
version = "0.1.0"
description = "Python bindings for the Rust Vtracer raster-to-vector library"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
maturin = "^1.2"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
compatibility = "linux"
sdist-include = ["LICENSE", "Readme.md"]