[package]
name = "vtracer-webapp"
version = "0.4.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "A web app to convert images into vector graphics."
license = "MIT OR Apache-2.0"
homepage = "http://www.visioncortex.org/vtracer"
repository = "https://github.com/visioncortex/vtracer/"
categories = ["graphics"]
keywords = ["svg", "computer-graphics"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
console_log = { version = "0.2", features = ["color"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
visioncortex = "0.8.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "HtmlElement",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
]
